--- a/app/options.html
+++ b/app/options.html
@@ -15,7 +15,7 @@
     </div>
     <div>
       <span>Source</span>
-      <input id="src" type="text" name="host" />
+      <input id="host" type="text" name="host" />
     </div>
     <button id="save">Save</button>
     <!-- build:js scripts/options.js -->
