--- a/app/popup.html
+++ b/app/popup.html
@@ -12,7 +12,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <div id="status"></div>
+    <div id="status">onload</div>
 
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
