set ignore lists

--- a/app/options.html
+++ b/app/options.html
@@ -17,6 +17,10 @@
       <span>Source</span>
       <input id="host" type="text" name="host" />
     </div>
+    <div>
+      <div>Ignore domains (plz split <b>line break</b>)</div>
+      <textarea id="ignore" rows="4" cols="40"></textarea>
+    </div>
     <button id="save">Save</button>
     <!-- build:js scripts/options.js -->
     <script src="scripts/options.js"></script>
