popup windowに情報を表示

--- a/app/popup.html
+++ b/app/popup.html
@@ -5,10 +5,16 @@
   <title>Document</title>
   <script src="scripts/popup.js"></script>
 </head>
-<body>
+<body style="width: 400px;">
 
-  <div id="status">
-    <h1></h1>
+  <div class="title" style="float: left;width: 100px;">
+    <p>ページID</p>
+    <p>トラッキングID</p>
+    <p>状態</p>
+  </div>
+
+  <div id="status" style="float: right;width: 300px;">
+
   </div>
 
 </body>
