--- a/app/popup.html
+++ b/app/popup.html
@@ -5,17 +5,14 @@
   <title>Document</title>
   <script src="scripts/popup.js"></script>
 </head>
-<body style="width: 400px;">
-
-  <div class="title" style="float: left;width: 100px;">
-    <p>ページID</p>
-    <p>トラッキングID</p>
-    <p>状態</p>
-  </div>
-
-  <div id="status" style="float: right;width: 300px;">
-
-  </div>
-
+<body>
+  <table border="1" cellspacing="0" style="font-size: 15px;">
+    <tr>
+      <th>pageId</th>
+      <th>trackingId</th>
+      <th>status</th>
+    </tr>
+    <tr></tr>
+  </table>
 </body>
 </html>
