contentの関数名修正、fetch()使用１回に。popupのstyleをcssファイルに記述

--- a/app/popup.html
+++ b/app/popup.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <script src="scripts/popup.js"></script>
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  <table border="1" cellspacing="0" style="font-size: 15px;">
+  <table border="1" cellspacing="0">
     <tr>
       <th>pageId</th>
       <th>trackingId</th>
