fix(app) update tracker state

--- a/app/popup.html
+++ b/app/popup.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <!-- build:js scripts/popup.js -->
   <script src="scripts/popup.js"></script>
+  <!-- endbuild -->
+  <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
+  <!-- endbuild -->
 </head>
 <body>
   <table border="1" cellspacing="0">
