distへriotファイル追加用のgulpfile修正

--- a/app/popup.html
+++ b/app/popup.html
@@ -9,15 +9,8 @@
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
+  <script src="scripts/riot.csp.min.js"></script>
 </head>
 <body>
-  <table border="1" cellspacing="0">
-    <tr>
-      <th>pageId</th>
-      <th>trackingId</th>
-      <th>status</th>
-    </tr>
-    <tr></tr>
-  </table>
 </body>
 </html>
