--- a/app/popup.html
+++ b/app/popup.html
@@ -6,11 +6,17 @@
   <!-- build:js scripts/popup.js -->
   <script src="scripts/popup.js"></script>
   <!-- endbuild -->
+  <script src="scripts/riot.csp.min.js"></script>
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
-  <script src="scripts/riot.csp.min.js"></script>
+  <!-- <script src="scripts/popupInfo.js"></script> -->
 </head>
 <body>
+  <info></info>
+  <!-- build:js scripts/popupInfo.js -->
+  <script src="scripts/popupInfo.js"></script>
+  <!-- endbuild -->
+  <script></script>
 </body>
 </html>
