popup windowにデータを表示

--- a/app/popup.html
+++ b/app/popup.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <!-- build:js scripts/popup.js -->
-  <script src="scripts/popup.js"></script>
-  <!-- endbuild -->
-  <script src="scripts/riot.csp.min.js"></script>
-  <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild -->
-  <!-- <script src="scripts/popupInfo.js"></script> -->
-</head>
-<body>
-  <info></info>
-  <!-- build:js scripts/popupInfo.js -->
-  <script src="scripts/popupInfo.js"></script>
-  <!-- endbuild -->
-  <script></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <!-- build:css styles/main.css -->
+    <link rel="styles/main.css">
+    <!-- endbuild -->
+    <script src="scripts/riot.csp.min.js"></script>
+    <!-- build:js scripts/popup.js -->
+    <script src="scripts/popup.js"></script>
+    <!-- endbuild -->
+  </head>
+  <body>
+    <info></info>
+    <!-- build:js scripts/popupInfo.js -->
+    <script src="scripts/popupInfo.js"></script>
+    <!-- endbuild -->
+  </body>
 </html>
