refactor(app) remove unused

--- a/app/options.html
+++ b/app/options.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'>
+  <meta charset="UTF-8" />
   <title>USERDIVE tracker</title>
 </head>
 <body>
-  <script type='text/javascript' src='scripts/options.js'>
-
-  </script>
+  <div id="app"></div>
+  <script type="text/javascript" src="./scripts/options.js"></script>
 </body>
 </html>
